typhoid & stress calculator added

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -176,6 +176,22 @@
                         </div>
                     </div>
                 </div>
+                <div class="team-item">
+                    <div class="row g-0 bg-light rounded overflow-hidden">
+                        <div class="col-12 col-sm-5 h-100">
+                            <img class="img-fluid h-100" src="../static/images/fever.avif" style="object-fit: cover;">
+                        </div>
+                        <div class="col-12 col-sm-7 h-100 d-flex flex-column">
+                            <div class="mt-auto p-4">
+                                <h3>Typhoid Prediction</h3>
+                                <p class="m-0">let technology fight typhoid before symptoms do</p>
+                            </div>
+                            <div class="d-flex mt-auto border-top p-4">
+                                <a href="/typhoid" class="btns">Check Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -221,7 +237,23 @@
                             </div>
                         </div>
                     </div>
-                </div>               
+                </div> 
+                <div class="team-item">
+                    <div class="row g-0 bg-light rounded overflow-hidden">
+                        <div class="col-12 col-sm-5 h-100">
+                            <img src="../static/images/stress.avif" class="img-fluid w-100 h-100" style="object-fit: cover; object-position: center;">
+                        </div>
+                        <div class="col-12 col-sm-7 h-100 d-flex flex-column">
+                            <div class="mt-auto p-4">
+                                <h3>Stress Calculator</h3>
+                                <p class="m-0">Measure your stress, master your peace</p>
+                            </div>
+                            <div class="d-flex mt-auto border-top p-4">
+                                <a href="/stress" class="btns">Calculate Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>                             
             </div>
         </div>
     </div>
