typhoid & stress calculator added

--- a/templates/home.html
+++ b/templates/home.html
@@ -233,7 +233,7 @@
             <div
                 class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
                 <svg class="bi" width="1em" height="1em">
-                    <image width="1em" height="1em" href="../static/images/liver_icon.jpg" />
+                    <image width="1em" height="1em" href="../static/images/f1.png" />
                 </svg>
             </div>
             <div>
