--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -229,7 +229,7 @@
 
 
     <!--Mental health start-->
-    <!-- <div class="container-fluid py-5">
+    <div class="container-fluid py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5" style="max-width: 500px;">
                 <h3 class="d-inline-block text-primary text-uppercase border-bottom border-5">Mental Health</h3>
@@ -247,7 +247,7 @@
                                 <p class="m-0">Early screening leads to early support—take a moment for your mental well-being.</p>
                             </div>
                             <div class="d-flex mt-auto border-top p-4">
-                                <a href="/BMI" class="btns">Screen Now</a>
+                                <a href="/depression" class="btns">Screen Now</a>
                             </div>
                         </div>
                     </div>
@@ -255,22 +255,22 @@
                 <div class="team-item">
                     <div class="row g-0 bg-light rounded overflow-hidden">
                         <div class="col-12 col-sm-5 h-100">
-                            <img src="../static/images/bmr.png" class="img-fluid w-100 h-100" style="object-fit: cover; object-position: center;">
+                            <img src="../static/images/anxiety.jpg" class="img-fluid w-100 h-100" style="object-fit: cover; object-position: center;">
                         </div>
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                             <div class="mt-auto p-4">
-                                <h3>BMR Calculator</h3>
-                                <p class="m-0">Discover your daily calorie needs based on your Basal Metabolic Rate.</p>
+                                <h3>Anxiety</h3>
+                                <p class="m-0">Take a moment for your mind — screen your anxiety levels with medically proven method.</p>
                             </div>
                             <div class="d-flex mt-auto border-top p-4">
-                                <a href="/BMR" class="btns">Check Now</a>
+                                <a href="/anxiety" class="btns">Screen Now</a>
                             </div>
                         </div>
                     </div>
                 </div>               
             </div>
         </div>
-    </div> -->
+    </div>
     <!--mental health end-->
 
 
