--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,11 +5,13 @@
     <meta charset="utf-8">
     <title>dashboard</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    
+
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">  
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" rel="stylesheet">
@@ -19,12 +21,12 @@
     <link href="../static/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="../static/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
-   
+
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
     <link href="../static/css/doc.css" rel="stylesheet">
     <style>
-        .btns{
+        .btns {
             border: 1px solid var(--black);
             display: inline-block;
             margin-top: 1rem;
@@ -35,8 +37,9 @@
             cursor: pointer;
             background: none;
         }
-        .btns:hover{
-            background: linear-gradient(120deg,#5969C2 40%,#663399);
+
+        .btns:hover {
+            background: linear-gradient(120deg, #5969C2 40%, #663399);
             color: #fff;
         }
     </style>
@@ -47,21 +50,25 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
             <a class="navbar-brand" href="/dashboard">HealthCheck</a>
-            <img src="../static/images/icon.png" class="d-inline-flex link-body-emphasis text-decoration-none" alt="" width="40" height="32">
+            <img src="../static/images/icon.png" class="d-inline-flex link-body-emphasis text-decoration-none" alt=""
+                width="40" height="32">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="/dashboard"><i class="fa fa-home" aria-hidden="true">Home</i></a></li>
-                    <li class="nav-item"><a class="nav-link" href="/about"><i class="fa fa-info-circle" aria-hidden="true">About</i></a></li>
+                    <li class="nav-item"><a class="nav-link" href="/dashboard"><i class="fa fa-home"
+                                aria-hidden="true">Home</i></a></li>
+                    <li class="nav-item"><a class="nav-link" href="/about"><i class="fa fa-info-circle"
+                                aria-hidden="true">About</i></a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button"
+                            data-bs-toggle="dropdown">
                             <img src="../static/images/profile_icon.png" alt="Profile" height="25px">
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
                             <li><a class="dropdown-item" href="/profile">View Profile</a></li>
-                            <li><a class="dropdown-item" href="/activity">User Activity</a></li> 
+                            <li><a class="dropdown-item" href="/activity">User Activity</a></li>
                             <li><a class="dropdown-item text-danger" href="/logout">Logout</a></li>
                         </ul>
                     </li>
@@ -115,7 +122,8 @@
                 <div class="team-item">
                     <div class="row g-0 bg-light rounded overflow-hidden">
                         <div class="col-12 col-sm-5 h-100">
-                            <img class="img-fluid h-100" src="../static/images/parkinson.png" style="object-fit: cover;">
+                            <img class="img-fluid h-100" src="../static/images/parkinson.png"
+                                style="object-fit: cover;">
                         </div>
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                             <div class="mt-auto p-4">
@@ -131,7 +139,8 @@
                 <div class="team-item">
                     <div class="row g-0 bg-light rounded overflow-hidden">
                         <div class="col-12 col-sm-5 h-100">
-                            <img class="img-fluid h-100" src="../static/images/ckd_banner3.png" style="object-fit: cover;">
+                            <img class="img-fluid h-100" src="../static/images/ckd_banner3.png"
+                                style="object-fit: cover;">
                         </div>
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                             <div class="mt-auto p-4">
@@ -163,7 +172,8 @@
                 <div class="team-item">
                     <div class="row g-0 bg-light rounded overflow-hidden">
                         <div class="col-12 col-sm-5 h-100">
-                            <img class="img-fluid h-100" src="../static/images/Breast-Cancer.jpeg" style="object-fit: cover;">
+                            <img class="img-fluid h-100" src="../static/images/Breast-Cancer.jpeg"
+                                style="object-fit: cover;">
                         </div>
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                             <div class="mt-auto p-4">
@@ -209,51 +219,39 @@
                 <div class="team-item">
                     <div class="row g-0 bg-light rounded overflow-hidden">
                         <div class="col-12 col-sm-5 h-100">
-                            <img src="../static/images/bmi.jpeg" class="img-fluid w-100 h-100" style="object-fit: cover; object-position: center;">
+                            <img src="../static/images/bmi.jpeg" class="img-fluid w-100 h-100"
+                                style="object-fit: cover; object-position: center;">
                         </div>
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                             <div class="mt-auto p-4">
                                 <h3>BMI Calculator</h3>
-                                <p class="m-0">Assess your body mass index to better understand your health and get advises accordingly.</p>
+                                <p class="m-0">Assess your body mass index to better understand your health and get
+                                    advises accordingly.</p>
                             </div>
                             <div class="d-flex mt-auto border-top p-4">
                                 <a href="/BMI" class="btns">Calculate Now</a>
                             </div>
                         </div>
                     </div>
-                </div>               
+                </div>
                 <div class="team-item">
                     <div class="row g-0 bg-light rounded overflow-hidden">
                         <div class="col-12 col-sm-5 h-100">
-                            <img src="../static/images/bmr.png" class="img-fluid w-100 h-100" style="object-fit: cover; object-position: center;">
+                            <img src="../static/images/bmr.png" class="img-fluid w-100 h-100"
+                                style="object-fit: cover; object-position: center;">
                         </div>
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                             <div class="mt-auto p-4">
                                 <h3>BMR Calculator</h3>
-                                <p class="m-0">Discover your daily calorie needs based on your Basal Metabolic Rate and get trustsed lifestyle suggestions.</p>
+                                <p class="m-0">Discover your daily calorie needs based on your Basal Metabolic Rate and
+                                    get trustsed lifestyle suggestions.</p>
                             </div>
                             <div class="d-flex mt-auto border-top p-4">
                                 <a href="/BMR" class="btns">Calculate Now</a>
                             </div>
                         </div>
                     </div>
-                </div> 
-                <div class="team-item">
-                    <div class="row g-0 bg-light rounded overflow-hidden">
-                        <div class="col-12 col-sm-5 h-100">
-                            <img src="../static/images/stress.avif" class="img-fluid w-100 h-100" style="object-fit: cover; object-position: center;">
-                        </div>
-                        <div class="col-12 col-sm-7 h-100 d-flex flex-column">
-                            <div class="mt-auto p-4">
-                                <h3>Stress Calculator</h3>
-                                <p class="m-0">Measure your stress, master your peace</p>
-                            </div>
-                            <div class="d-flex mt-auto border-top p-4">
-                                <a href="/stress" class="btns">Calculate Now</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>                             
+                </div>
             </div>
         </div>
     </div>
@@ -271,35 +269,56 @@
                 <div class="team-item">
                     <div class="row g-0 bg-light rounded overflow-hidden">
                         <div class="col-12 col-sm-5 h-100">
-                            <img src="../static/images/dep.jpeg" class="img-fluid w-100 h-100" style="object-fit: cover; object-position: center;">
+                            <img src="../static/images/dep.jpeg" class="img-fluid w-100 h-100"
+                                style="object-fit: cover; object-position: center;">
                         </div>
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                             <div class="mt-auto p-4">
                                 <h3>Depression</h3>
-                                <p class="m-0">Early screening leads to early support—take a moment for your mental well-being.</p>
+                                <p class="m-0">Early screening leads to early support—take a moment for your mental
+                                    well-being.</p>
                             </div>
                             <div class="d-flex mt-auto border-top p-4">
                                 <a href="/depression" class="btns">Screen Now</a>
                             </div>
                         </div>
                     </div>
-                </div>               
+                </div>
                 <div class="team-item">
                     <div class="row g-0 bg-light rounded overflow-hidden">
                         <div class="col-12 col-sm-5 h-100">
-                            <img src="../static/images/anxiety.jpg" class="img-fluid w-100 h-100" style="object-fit: cover; object-position: center;">
+                            <img src="../static/images/anxiety.jpg" class="img-fluid w-100 h-100"
+                                style="object-fit: cover; object-position: center;">
                         </div>
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                             <div class="mt-auto p-4">
                                 <h3>Anxiety</h3>
-                                <p class="m-0">Take a moment for your mind — screen your anxiety levels with medically proven method.</p>
+                                <p class="m-0">Take a moment for your mind — screen your anxiety levels with medically
+                                    proven method.</p>
                             </div>
                             <div class="d-flex mt-auto border-top p-4">
                                 <a href="/anxiety" class="btns">Screen Now</a>
                             </div>
                         </div>
                     </div>
-                </div>               
+                </div>
+                <div class="team-item">
+                    <div class="row g-0 bg-light rounded overflow-hidden">
+                        <div class="col-12 col-sm-5 h-100">
+                            <img src="../static/images/stress.avif" class="img-fluid w-100 h-100"
+                                style="object-fit: cover; object-position: center;">
+                        </div>
+                        <div class="col-12 col-sm-7 h-100 d-flex flex-column">
+                            <div class="mt-auto p-4">
+                                <h3>Stress Calculator</h3>
+                                <p class="m-0">Measure your stress, master your peace</p>
+                            </div>
+                            <div class="d-flex mt-auto border-top p-4">
+                                <a href="/stress" class="btns">Calculate Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -311,21 +330,25 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Get In Touch</h4>
+                    <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">
+                        Get In Touch</h4>
                     <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>HealthCheck@gmail.com</p>
                     <p class="mb-0"><i class="fa fa-phone-alt text-primary me-3"></i>8976653322</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Quick Links</h4>
+                    <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">
+                        Quick Links</h4>
                     <div class="d-flex flex-column justify-content-start">
                         <a class="text-light mb-2" href="home1.html"><i class="fa fa-angle-right me-2"></i>Home</a>
                         <a class="text-light mb-2" href="about.html"><i class="fa fa-angle-right me-2"></i>About Us</a>
                         <a class="text-light mb-2" href="login.html"><i class="fa fa-angle-right me-2"></i>Login</a>
-                        <a class="text-light mb-2" href="dashboard.html"><i class="fa fa-angle-right me-2"></i>Features</a>
+                        <a class="text-light mb-2" href="dashboard.html"><i
+                                class="fa fa-angle-right me-2"></i>Features</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Newsletter</h4>
+                    <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">
+                        Newsletter</h4>
                     <form action="">
                         <div class="input-group">
                             <input type="text" class="form-control p-3 border-0" placeholder="Your Email Address">
@@ -334,10 +357,14 @@
                     </form>
                     <h6 class="text-primary text-uppercase mt-4 mb-3">Follow Us</h6>
                     <div class="d-flex">
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i
+                                class="fab fa-twitter"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i
+                                class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#"><i
+                                class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -365,31 +392,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
