--- a/templates/depression.html
+++ b/templates/depression.html
@@ -34,8 +34,8 @@
         .card {
             border-radius: 1.5rem;
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-            border: none;
-            background-color: #ffffff;
+            border:  6px solid #6cfafa;
+            background-color: #dbf7f0;
             padding: 2rem;
         }
 
