--- a/templates/anxiety.html
+++ b/templates/anxiety.html
@@ -28,7 +28,8 @@
         .container-box {
             max-width: 850px;
             margin: 50px auto;
-            background-color: #ffffff;
+            border:  6px solid #46e1f5;
+            background-color: #d8f5f5;
             border-radius: 12px;
             padding: 30px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -68,7 +69,6 @@
 <body>
 
     <div class="container-box">
-        <!-- <h2>📝 Anxiety Screening</h2> -->
         <h2 style="color: #0d6efd; font-weight: bold;"><i class="fas fa-brain me-2"></i>Anxiety Screening</h2>
         <form id="gad7Form">
             <div class="row">
