--- a/templates/depression.html
+++ b/templates/depression.html
@@ -35,7 +35,7 @@
             border-radius: 1.5rem;
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
             border:  6px solid #6cfafa;
-            background-color: #dbf7f0;
+            background-color: #e9f8f4;
             padding: 2rem;
         }
 
