--- a/templates/add_doctor.html
+++ b/templates/add_doctor.html
@@ -38,6 +38,11 @@
 </head>
 
 <body>
+    <div class="container mt-4">
+        <a href="/admin/dashboard" class="btn btn-outline-primary rounded-pill shadow-sm">
+            <i class="bi bi-arrow-left-circle-fill me-1"></i> Back
+        </a>
+    </div>
     <div class="container form-wrapper" data-aos="zoom-in">
         <form method="POST" enctype="multipart/form-data" class="p-4 shadow-lg rounded-4 bg-white border border-2">
 
