--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -12,7 +12,7 @@
         }
 
         .action-btns .btn {
-            margin-right: 5px;
+            margin: 2px;
         }
 
         .action-btns i {
@@ -50,17 +50,32 @@
             </thead>
             <tbody>
                 {% for user in users %}
-                <tr class="text-center align-middle">
+                <tr class="text-center align-middle {% if user[5] == 'blocked' %}table-danger{% endif %}">
                     <td>{{ user[0] }}</td>
                     <td>{{ user[1] }}</td>
                     <td>{{ user[2] }}</td>
                     <td>{{ user[3] }}</td>
                     <td>{{ user[4] }}</td>
                     <td class="action-btns">
+                        {% if user[5] == 'blocked' %}
+                        <span class="badge badge-danger mb-1">Blocked</span><br>
+                        {% endif %}
+                        <a href="{{ url_for('view_user_details', id=user[0]) }}" class="btn btn-info btn-sm"
+                            title="View User">
+                            <i class="fas fa-eye"></i> View Details
+                        </a>
+                        {% if user[5] == 'active' %}
                         <a href="{{ url_for('block_user', id=user[0]) }}" class="btn btn-warning btn-sm"
                             title="Block User" onclick="return confirm('Are you sure you want to block this user?')">
                             <i class="fas fa-user-lock"></i> Block
                         </a>
+                        {% else %}
+                        <a href="{{ url_for('unblock_user', id=user[0]) }}" class="btn btn-success btn-sm"
+                            title="Unblock User"
+                            onclick="return confirm('Are you sure you want to unblock this user?')">
+                            <i class="fas fa-unlock"></i> Unblock
+                        </a>
+                        {% endif %}
                         <a href="{{ url_for('delete_user', id=user[0]) }}" class="btn btn-danger btn-sm"
                             title="Delete User" onclick="return confirm('Are you sure you want to delete this user?')">
                             <i class="fas fa-trash-alt"></i> Delete
@@ -82,7 +97,6 @@
         </div>
     </div>
 
-    <!-- Optional: Include Bootstrap JS for better interactivity -->
     <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
 </body>
 
