--- a/templates/view_doctors.html
+++ b/templates/view_doctors.html
@@ -83,6 +83,17 @@
                     <img src="{{ url_for('static', filename=doc['photo_path'].split('static/')[-1].replace('\\', '/')) }}"
                         class="doctor-img card-img-top" alt="{{ doc['name'] }}">
                     <div class="card-body text-center">
+                        <div class="position-absolute top-0 end-0 mt-2 me-2">
+                            <a href="{{ url_for('edit_doctor', doctor_id=doc['id']) }}" class="text-primary me-2"
+                                title="Edit">
+                                <i class="bi bi-pencil-square fs-5"></i>
+                            </a>
+                            <a href="{{ url_for('delete_doctor', doctor_id=doc['id']) }}" class="text-danger"
+                                title="Delete"
+                                onclick="return confirm('Are you sure you want to delete this doctor?');">
+                                <i class="bi bi-trash-fill fs-5"></i>
+                            </a>
+                        </div>
                         <h5 class="card-title">
                             <i class="bi bi-person-circle me-1 text-secondary"></i>{{ doc['name'] }}
                         </h5>
